Containerise vagrant example and fix #1350

--- a/playbooks/common/openshift-cluster/validate_hostnames.yml
+++ b/playbooks/common/openshift-cluster/validate_hostnames.yml
@@ -5,7 +5,7 @@
   - openshift_facts
   tasks:
   - shell:
-      getent ahostsv4 {{ openshift.common.hostname }} | head -n 1 | awk '{ print $1 }'
+      getent ahostsv4 {{ openshift.common.hostname }} | grep -v "127.0.0.1" | head -n 1 | awk '{ print $1 }'
     register: lookupip
     changed_when: false
     failed_when: false
