--- a/playbooks/common/openshift-cluster/update_repos_and_packages.yml
+++ b/playbooks/common/openshift-cluster/update_repos_and_packages.yml
@@ -11,7 +11,7 @@
   # 2.0.2)
   - openshift_facts
   - role: rhel_subscribe
-    when: deployment_type in ["enterprise", "atomic-enterprise", "openshift-enterprise"] and
+    when: deployment_type == "openshift-enterprise" and
           ansible_distribution == "RedHat" and
           lookup('oo_option', 'rhel_skip_subscription') | default(rhsub_skip, True) |
             default('no', True) | lower in ['no', 'false']
