--- a/playbooks/adhoc/uninstall.yml
+++ b/playbooks/adhoc/uninstall.yml
@@ -1,5 +1,5 @@
-# This deletes *ALL* Origin, Atomic Enterprise Platform and OpenShift
-# Enterprise content installed by ansible.  This includes:
+# This deletes *ALL* Origin and OpenShift Enterprise content installed by
+# ansible.  This includes:
 #
 #    configuration
 #    containers
@@ -28,7 +28,6 @@
   - name: Stop services
     service: name={{ item }} state=stopped
     with_items:
-    - atomic-enterprise-node
     - atomic-openshift-node
     - openshift-node
     - openvswitch
@@ -46,9 +45,6 @@
     action: "{{ ansible_pkg_mgr }} name={{ item }} state=absent"
     when: not is_atomic | bool
     with_items:
-    - atomic-enterprise
-    - atomic-enterprise-node
-    - atomic-enterprise-sdn-ovs
     - atomic-openshift
     - atomic-openshift-clients
     - atomic-openshift-node
@@ -67,7 +63,6 @@
     - origin-clients
     - origin-node
     - origin-sdn-ovs
-    - tuned-profiles-atomic-enterprise-node
     - tuned-profiles-atomic-openshift-node
     - tuned-profiles-openshift-node
     - tuned-profiles-origin-node
@@ -101,9 +96,6 @@
   - shell: find /var/lib/origin/openshift.local.volumes -type d -exec umount {} \; 2>/dev/null || true
     changed_when: False
 
-  - shell: find /var/lib/atomic-enterprise/openshift.local.volumes -type d -exec umount {} \; 2>/dev/null || true
-    changed_when: False
-
   - shell: find /var/lib/openshift/openshift.local.volumes -type d -exec umount {} \; 2>/dev/null || true
     changed_when: False
 
@@ -112,7 +104,6 @@
     failed_when: False
     with_items:
     - openshift-enterprise
-    - atomic-enterprise
     - origin
 
   - shell: docker ps -a | grep Exited | egrep "{{ item }}" | awk '{print $1}'
@@ -120,9 +111,6 @@
     failed_when: False
     register: exited_containers_to_delete
     with_items:
-    - aep3.*/aep
-    - aep3.*/node
-    - aep3.*/openvswitch
     - openshift3/ose
     - openshift3/node
     - openshift3/openvswitch
@@ -139,7 +127,6 @@
     register: images_to_delete
     with_items:
     - registry\.access\..*redhat\.com/openshift3
-    - registry\.access\..*redhat\.com/aep3
     - registry\.qe\.openshift\.com/.*
     - registry\.access\..*redhat\.com/rhel7/etcd
     - docker.io/openshift
@@ -160,7 +147,6 @@
     file: path={{ item }} state=absent
     with_items:
     - /etc/ansible/facts.d/openshift.fact
-    - /etc/atomic-enterprise
     - /etc/openshift
     - /etc/openshift-sdn
     - /etc/origin
@@ -169,7 +155,6 @@
     - /etc/systemd/system/origin-node.service
     - /etc/systemd/system/origin-node-dep.service
     - /etc/systemd/system/openvswitch.service
-    - /etc/sysconfig/atomic-enterprise-node
     - /etc/sysconfig/atomic-openshift-node
     - /etc/sysconfig/atomic-openshift-node-dep
     - /etc/sysconfig/origin-node
@@ -180,7 +165,6 @@
     - /etc/sysconfig/origin-node
     - /etc/systemd/system/atomic-openshift-node.service.wants
     - /run/openshift-sdn
-    - /var/lib/atomic-enterprise
     - /var/lib/openshift
     - /var/lib/origin
     - /etc/NetworkManager/dispatcher.d/99-origin-dns.sh
@@ -193,7 +177,6 @@
   - name: Stop services
     service: name={{ item }} state=stopped
     with_items:
-    - atomic-enterprise-master
     - atomic-openshift-master
     - atomic-openshift-master-api
     - atomic-openshift-master-controllers
@@ -203,7 +186,6 @@
     - origin-master
     - origin-master-api
     - origin-master-controllers
-    - pcsd
     failed_when: false
 
   - name: unmask services
@@ -218,8 +200,6 @@
     action: "{{ ansible_pkg_mgr }} name={{ item }} state=absent"
     when: not is_atomic | bool
     with_items:
-    - atomic-enterprise
-    - atomic-enterprise-master
     - atomic-openshift
     - atomic-openshift-clients
     - atomic-openshift-master
@@ -227,15 +207,12 @@
     - cockpit-docker
     - cockpit-shell
     - cockpit-ws
-    - corosync
     - kubernetes-client
     - openshift
     - openshift-master
     - origin
     - origin-clients
     - origin-master
-    - pacemaker
-    - pcs
 
   - shell: systemctl reset-failed
     changed_when: False
@@ -248,8 +225,6 @@
     with_items:
     - "~{{ ansible_ssh_user }}/.kube"
     - /etc/ansible/facts.d/openshift.fact
-    - /etc/atomic-enterprise
-    - /etc/corosync
     - /etc/openshift
     - /etc/openshift-sdn
     - /etc/origin
@@ -260,9 +235,6 @@
     - /etc/systemd/system/origin-master-api.service
     - /etc/systemd/system/origin-master-controllers.service
     - /etc/systemd/system/openvswitch.service
-    - /etc/sysconfig/atomic-enterprise-master
-    - /etc/sysconfig/atomic-enterprise-master-api
-    - /etc/sysconfig/atomic-enterprise-master-controllers
     - /etc/sysconfig/atomic-openshift-master
     - /etc/sysconfig/atomic-openshift-master-api
     - /etc/sysconfig/atomic-openshift-master-controllers
@@ -276,11 +248,8 @@
     - /etc/sysconfig/origin-master-controllers
     - /root/.kube
     - /usr/share/openshift/examples
-    - /var/lib/atomic-enterprise
     - /var/lib/openshift
     - /var/lib/origin
-    - /var/lib/pacemaker
-    - /var/lib/pcsd
     - /usr/lib/systemd/system/atomic-openshift-master-api.service
     - /usr/lib/systemd/system/atomic-openshift-master-controllers.service
     - /usr/lib/systemd/system/origin-master-api.service
