--- a/playbooks/common/openshift-cluster/additional_config.yml
+++ b/playbooks/common/openshift-cluster/additional_config.yml
@@ -14,8 +14,6 @@
     openshift_master_ha: "{{ groups.oo_masters | length > 1 }}"
     omc_cluster_hosts: "{{ groups.oo_masters | join(' ')}}"
   roles:
-  - role: openshift_master_cluster
-    when: openshift_master_ha | bool and openshift.master.cluster_method == "pacemaker"
   - role: openshift_examples
     registry_url: "{{ openshift.master.registry_url }}"
     when: openshift.common.install_examples | bool
@@ -24,7 +22,7 @@
   - role: openshift_manageiq
     when: openshift.common.use_manageiq | bool
   - role: cockpit
-    when: not openshift.common.is_atomic and ( deployment_type in ['atomic-enterprise','openshift-enterprise'] ) and
+    when: not openshift.common.is_atomic and (deployment_type == 'openshift-enterprise') and
       (osm_use_cockpit | bool or osm_use_cockpit is undefined )
   - role: flannel_register
     when: openshift.common.use_flannel | bool
