--- a/roles/rhel_subscribe/tasks/enterprise.yml
+++ b/roles/rhel_subscribe/tasks/enterprise.yml
@@ -3,20 +3,15 @@
   command: subscription-manager repos --disable="*"
 
 - set_fact:
-    default_ose_version: '3.0'
-  when: deployment_type == 'enterprise'
-
-- set_fact:
     default_ose_version: '3.2'
-  when: deployment_type in ['atomic-enterprise', 'openshift-enterprise']
+  when: deployment_type == 'openshift-enterprise'
 
 - set_fact:
     ose_version: "{{ lookup('oo_option', 'ose_version') | default(default_ose_version, True) }}"
 
 - fail:
     msg: "{{ ose_version }} is not a valid version for {{ deployment_type }} deployment type"
-  when: ( deployment_type == 'enterprise' and ose_version not in ['3.0'] ) or
-        ( deployment_type in ['atomic-enterprise', 'openshift-enterprise'] and ose_version not in ['3.1', '3.2'] )
+  when: deployment_type == 'openshift-enterprise' and ose_version not in ['3.1', '3.2']
 
 - name: Enable RHEL repositories
   command: subscription-manager repos \
