--- a/roles/openshift_cli/tasks/main.yml
+++ b/roles/openshift_cli/tasks/main.yml
@@ -25,3 +25,7 @@
     - /usr/local/bin/oc
     - /usr/local/bin/kubectl
   when: openshift.common.is_containerized | bool
+
+- name: Install bash completion for oc tools
+  action: "{{ ansible_pkg_mgr }} name=bash-completion state=present"
+  when: not openshift.common.is_containerized | bool
