--- a/playbooks/common/openshift-cluster/upgrades/upgrade.yml
+++ b/playbooks/common/openshift-cluster/upgrades/upgrade.yml
@@ -9,17 +9,18 @@
 - name: Upgrade master
   hosts: oo_masters_to_config
   handlers:
-  - include: ../../../../../roles/openshift_master/handlers/main.yml
+  - include: ../../../../roles/openshift_master/handlers/main.yml
+    static: yes
   roles:
   - openshift_facts
   tasks:
   - include: rpm_upgrade.yml component=master
     when: not openshift.common.is_containerized | bool
 
-  - include_vars: ../../../../../roles/openshift_master/vars/main.yml
+  - include_vars: ../../../../roles/openshift_master/vars/main.yml
 
   - name: Update systemd units
-    include: ../../../../../roles/openshift_master/tasks/systemd_units.yml
+    include: ../../../../roles/openshift_master/tasks/systemd_units.yml
 
 #  - name: Upgrade master configuration
 #    openshift_upgrade_config:
@@ -64,7 +65,8 @@
   roles:
   - openshift_facts
   handlers:
-  - include: ../../../../../roles/openshift_node/handlers/main.yml
+  - include: ../../../../roles/openshift_node/handlers/main.yml
+    static: yes
   tasks:
   # TODO: To better handle re-trying failed upgrades, it would be nice to check if the node
   # or docker actually needs an upgrade before proceeding. Perhaps best to save this until
@@ -83,10 +85,10 @@
 
   # Only check if docker upgrade is required if docker_upgrade is not
   # already set to False.
-  - include: ../docker/upgrade_check.yml
+  - include: docker/upgrade_check.yml
     when: docker_upgrade is not defined or docker_upgrade | bool and not openshift.common.is_atomic | bool
 
-  - include: ../docker/upgrade.yml
+  - include: docker/upgrade.yml
     when: l_docker_upgrade is defined and l_docker_upgrade | bool and not openshift.common.is_atomic | bool
 
   - include: rpm_upgrade.yml
