--- a/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/upgrade.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/upgrade.yml
@@ -84,10 +84,10 @@
   # Only check if docker upgrade is required if docker_upgrade is not
   # already set to False.
   - include: ../docker/upgrade_check.yml
-    when: docker_upgrade is not defined or docker_upgrade | bool
+    when: docker_upgrade is not defined or docker_upgrade | bool and not openshift.common.is_atomic | bool
 
   - include: ../docker/upgrade.yml
-    when: l_docker_upgrade is defined and l_docker_upgrade | bool
+    when: l_docker_upgrade is defined and l_docker_upgrade | bool and not openshift.common.is_atomic | bool
 
   - include: rpm_upgrade.yml
     vars:
