Correct relative include for ansible version check.

--- a/playbooks/byo/openshift-cluster/upgrades/v3_2/upgrade.yml
+++ b/playbooks/byo/openshift-cluster/upgrades/v3_2/upgrade.yml
@@ -1,5 +1,5 @@
 ---
-- include: ../../common/openshift-cluster/verify_ansible_version.yml
+- include: ../../../../common/openshift-cluster/verify_ansible_version.yml
 
 - hosts: localhost
   connection: local
