Move role dependencies to playbooks.

--- a/playbooks/common/openshift-node/config.yml
+++ b/playbooks/common/openshift-node/config.yml
@@ -60,8 +60,30 @@
     when: "{{ (openshift_http_proxy is defined or openshift_https_proxy is defined) and
             openshift_generate_no_proxy_hosts | default(True) | bool }}"
   roles:
-  - role: openshift_node
+  - role: openshift_clock
+  - role: openshift_docker
+  - role: openshift_node_certificates
     openshift_ca_host: "{{ groups.oo_first_master.0 }}"
+  - role: openshift_cloud_provider
+  - role: openshift_common
+  - role: openshift_node_dnsmasq
+    when: openshift.common.use_dnsmasq
+  - role: os_firewall
+    os_firewall_allow:
+    - service: Kubernetes kubelet
+      port: 10250/tcp
+    - service: http
+      port: 80/tcp
+    - service: https
+      port: 443/tcp
+    - service: Openshift kubelet ReadOnlyPort
+      port: 10255/tcp
+    - service: Openshift kubelet ReadOnlyPort udp
+      port: 10255/udp
+    - service: OpenShift OVS sdn
+      port: 4789/udp
+      when: openshift.node.use_openshift_sdn | bool
+  - role: openshift_node
 
 - name: Configure node instances
   hosts: oo_nodes_to_config:!oo_containerized_master_nodes
@@ -77,8 +99,30 @@
     when: "{{ (openshift_http_proxy is defined or openshift_https_proxy is defined) and
             openshift_generate_no_proxy_hosts | default(True) | bool }}"
   roles:
-  - role: openshift_node
+  - role: openshift_clock
+  - role: openshift_docker
+  - role: openshift_node_certificates
     openshift_ca_host: "{{ groups.oo_first_master.0 }}"
+  - role: openshift_cloud_provider
+  - role: openshift_common
+  - role: openshift_node_dnsmasq
+    when: openshift.common.use_dnsmasq
+  - role: os_firewall
+    os_firewall_allow:
+    - service: Kubernetes kubelet
+      port: 10250/tcp
+    - service: http
+      port: 80/tcp
+    - service: https
+      port: 443/tcp
+    - service: Openshift kubelet ReadOnlyPort
+      port: 10255/tcp
+    - service: Openshift kubelet ReadOnlyPort udp
+      port: 10255/udp
+    - service: OpenShift OVS sdn
+      port: 4789/udp
+      when: openshift.node.use_openshift_sdn | bool
+  - role: openshift_node
 
 - name: Gather and set facts for flannel certificatess
   hosts: oo_nodes_to_config
