--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -248,7 +248,9 @@
     when: "{{ (openshift_http_proxy is defined or openshift_https_proxy is defined) and
             openshift_generate_no_proxy_hosts | default(True) | bool }}"
   roles:
-  - role: openshift_master
+  - role: openshift_master_facts
+  - role: openshift_hosted_facts
+  - role: openshift_master_certificates
     openshift_ca_host: "{{ groups.oo_first_master.0 }}"
     openshift_master_etcd_hosts: "{{ hostvars
                                      | oo_select_keys(groups['oo_etcd_to_config'] | default([]))
@@ -258,6 +260,32 @@
                                     | oo_select_keys(groups['oo_masters_to_config'] | default([]))
                                     | oo_collect('openshift.common.all_hostnames')
                                     | oo_flatten | unique }}"
+  - role: openshift_clock
+  - role: openshift_cloud_provider
+  - role: openshift_builddefaults
+  - role: os_firewall
+    os_firewall_allow:
+    - service: etcd embedded
+      port: 4001/tcp
+    - service: api server https
+      port: "{{ openshift.master.api_port }}/tcp"
+    - service: api controllers https
+      port: "{{ openshift.master.controllers_port }}/tcp"
+    - service: skydns tcp
+      port: "{{ openshift.master.dns_port }}/tcp"
+    - service: skydns udp
+      port: "{{ openshift.master.dns_port }}/udp"
+    - service: Fluentd td-agent tcp
+      port: 24224/tcp
+    - service: Fluentd td-agent udp
+      port: 24224/udp
+    - service: pcsd
+      port: 2224/tcp
+    - service: Corosync UDP
+      port: 5404/udp
+    - service: Corosync UDP
+      port: 5405/udp
+  - role: openshift_master
     openshift_master_hosts: "{{ groups.oo_masters_to_config }}"
   - role: nickhammond.logrotate
   - role: nuage_master
