adding security group creation per CIL-361

--- a/playbooks/aws/openshift-cluster/launch.yml
+++ b/playbooks/aws/openshift-cluster/launch.yml
@@ -7,6 +7,7 @@
   vars_files:
   - vars.yml
   tasks:
+  - include: tasks/create_security_group.yml
   - include: ../../common/openshift-cluster/tasks/set_etcd_launch_facts.yml
   - include: tasks/launch_instances.yml
     vars:
