this is resolving cil 361 and cil 410

--- a/playbooks/aws/openshift-cluster/launch.yml
+++ b/playbooks/aws/openshift-cluster/launch.yml
@@ -8,9 +8,11 @@
   - vars.yml
   tasks:
   - include: tasks/create_security_group.yml
+
   - include: ../../common/openshift-cluster/tasks/set_etcd_launch_facts.yml
   - include: tasks/launch_instances.yml
     vars:
+      private_ips: "{{etcd_ips}}"
       instances: "{{ etcd_names }}"
       cluster: "{{ cluster_id }}"
       type: "{{ k8s_type }}"
@@ -19,6 +21,7 @@
   - include: ../../common/openshift-cluster/tasks/set_master_launch_facts.yml
   - include: tasks/launch_instances.yml
     vars:
+      private_ips: "{{master_ips}}"
       instances: "{{ master_names }}"
       cluster: "{{ cluster_id }}"
       type: "{{ k8s_type }}"
@@ -30,6 +33,7 @@
       count: "{{ num_nodes }}"
   - include: tasks/launch_instances.yml
     vars:
+      private_ips: "{{node_ips}}"
       instances: "{{ node_names }}"
       cluster: "{{ cluster_id }}"
       type: "{{ k8s_type }}"
@@ -41,6 +45,7 @@
       count: "{{ num_infra }}"
   - include: tasks/launch_instances.yml
     vars:
+      private_ips: "{{node_ips}}"
       instances: "{{ node_names }}"
       cluster: "{{ cluster_id }}"
       type: "{{ k8s_type }}"
