--- a/playbooks/common/openshift-cluster/tasks/set_node_launch_facts.yml
+++ b/playbooks/common/openshift-cluster/tasks/set_node_launch_facts.yml
@@ -5,7 +5,7 @@
 
 - name: Generate node instance names(s)
   set_fact:
-    scratch_name: "{{ cluster_id }}-{{ k8s_type }}-{{ sub_host_type }}-{{ '%05x' | format(1048576 | random) }}"
+    scratch_name: "{{ cluster_id }}-{{ k8s_type }}-{{ sub_host_type }}-{{ item }}"
   register: node_names_output
   with_sequence: count={{ number_nodes }}
 
@@ -13,3 +13,17 @@
     node_names: "{{ node_names_output.results | default([])
                     | oo_collect('ansible_facts')
                     | oo_collect('scratch_name') }}"
+
+- debug: var=node_names
+
+
+- name: Generate master instance private ips 
+  set_fact:
+    scratch_name: "{{ private_subnet }}.{{ 255 | random }}"
+  register: node_ips_output
+  with_sequence: count={{ number_nodes }}
+
+- set_fact:
+    node_ips: "{{ node_ips_output.results | default([])
+                   | oo_collect('ansible_facts')
+                   | oo_collect('scratch_name') }}"
